force-app/main/default/objects/Account/fields/Cupom_MGM__c.field-meta.xml
<CustomField>
    <fullName>Cupom_MGM__c</fullName>
    <description>Member Get Member Field</description>
    <label>Cupom MGM</label>
    <type>TextArea</type>
</CustomField>