force-app/main/default/objects/Account/fields/Data_da_emissao_da_primeira_fatura__c.field-meta.xml
<CustomField>
    <fullName>Data_da_emissao_da_primeira_fatura__c</fullName>
    <label>Data da emissão da primeira fatura</label>
    <type>DateTime</type>
</CustomField>