force-app/main/default/objects/Account/fields/Id_do_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Id_do_Cliente__c</fullName>
    <label>ID do Cliente</label>
    <length>10</length>
    <type>Text</type>
</CustomField>