force-app/main/default/objects/Account/fields/Numero_de_Faturas__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Faturas__c</fullName>
    <label>Número de Faturas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>